--- a/client/src/app/forms/comments/forms/comment-input/comment-input.form.html
+++ b/client/src/app/forms/comments/forms/comment-input/comment-input.form.html
@@ -1,6 +1,6 @@
 <nz-tabset [nzAnimated]="false">
   <nz-tab nzTitle="Write">
-    <nz-mention [nzSuggestions]="suggestions" (nzOnSearchChange)="onSearchChange($event)" [nzPrefix]="['#', '@']"
+    <nz-mention [nzSuggestions]="suggestions" (nzOnSearchChange)="onSearchChange($event)" [nzPrefix]="['#', '@', '$']"
         nzNotFoundContent="No matches..."
         [nzValueWith]="autoCompleteValueFor"
         (nzOnSelect)="this.suggestions = []">
