--- a/client/src/app/components/comments/comment-list/comment-list.component.html
+++ b/client/src/app/components/comments/comment-list/comment-list.component.html
@@ -29,8 +29,8 @@
     </nz-space>
   </nz-col>
   <nz-col nzSpan="6">
-    <cvc-participant-list listTitle="Commenters" [participantList]="participants$ | ngrxPush"
-      (participantSelectedEvent)="onParticipantSelected($event)">
+    <cvc-participant-list listTitle="Commenters" [participantList]="commenters$ | ngrxPush"
+      (participantSelectedEvent)="onCommenterSelected($event)">
       <ng-template #itemTemplate let-user>
         <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
         </nz-avatar>
@@ -40,26 +40,31 @@
         <span>{{user.displayName}}</span>
       </ng-template>
     </cvc-participant-list>
-    <!-- <nz-card nzTitle="Curators Mentioned" nz-type="inner" style="margin-bottom: 1em">
-      <nz-space nzDirection="vertical" style="width: 100%">
-        <nz-space-item>
-          <nz-skeleton [nzAvatar]="true" [nzParagraph]="{ rows: 0 }"></nz-skeleton>
-        </nz-space-item>
-      </nz-space>
-    </nz-card>
-    <nz-card nzTitle="Entities Mentioned" nz-type="inner">
-      <nz-list nzDirection="vertical" style="width: 100%">
-        <nz-list-item>
-          <nz-skeleton [nzParagraph]="{ rows: 1 }"></nz-skeleton>
-        </nz-list-item>
-        <nz-list-item>
-          <nz-skeleton [nzParagraph]="{ rows: 1 }"></nz-skeleton>
-        </nz-list-item>
-        <nz-list-item>
-          <nz-skeleton [nzParagraph]="{ rows: 1 }"></nz-skeleton>
-        </nz-list-item>
-      </nz-list>
-    </nz-card> -->
-
+    <cvc-participant-list listTitle="Mentioned Users" [participantList]="mentionedUsers$ | ngrxPush"
+      (participantSelectedEvent)="onMentionedUserSelected($event)">
+      <ng-template #itemTemplate let-user>
+        <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
+        </nz-avatar>
+        <ng-template #noAvatar>
+          <nz-avatar nz-comment-avatar [nzText]="user.displayName.charAt(0) | uppercase"></nz-avatar>
+        </ng-template>
+        <span>{{user.displayName}}</span>
+      </ng-template>
+    </cvc-participant-list>
+    <cvc-participant-list listTitle="Mentioned Roles" [participantList]="mentionedRoles$ | ngrxPush"
+      (participantSelectedEvent)="onMentionedRoleSelected($event)">
+      <ng-template #itemTemplate let-role>
+        <nz-avatar nzIcon="civic-{{role.tag.displayName}}">
+        </nz-avatar>
+        <span>{{role.tag.displayName}}s</span>
+      </ng-template>
+    </cvc-participant-list>
+    <cvc-participant-list listTitle="Mentioned Entities" [participantList]="mentionedEntities$ | ngrxPush"
+      (participantSelectedEvent)="onMentionedEntitySelected($event)">
+      <ng-template #itemTemplate let-entity>
+        <i nz-icon [nzType]="entity.tag.tagType | iconNameForSubscribableEntity"></i>
+        <span>{{entity.tag.displayName}}</span>
+      </ng-template>
+    </cvc-participant-list>
   </nz-col>
 </nz-row>
