--- a/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
+++ b/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
@@ -40,6 +40,16 @@
           <span>{{field.displayName}}</span>
         </ng-template>
       </cvc-participant-list>
+      <cvc-participant-list listTitle="Resolvers" [participantList]="uniqueResolvers$ | ngrxPush" (participantSelectedEvent)="onResolverSelected($event)">
+        <ng-template #itemTemplate let-user>
+          <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
+          </nz-avatar>
+          <ng-template #noAvatar>
+              <nz-avatar nz-comment-avatar [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
+          </ng-template>
+          <span>{{user.username}}</span>
+        </ng-template>
+      </cvc-participant-list>
     </nz-col>
   </nz-row>
 </ng-container>
