--- a/client/src/app/components/revisions/revision-tag/revision-tag.component.html
+++ b/client/src/app/components/revisions/revision-tag/revision-tag.component.html
@@ -1,4 +1,17 @@
-<nz-tag>
+
+<ng-container *ngIf="subject; noSubject">
+  <a routerLink="/{{subject.__typename | typenameToRoute}}/{{subject.id}}/revisions">
+    <nz-tag>
+      <ng-template [ngTemplateOutlet]="revisionTemplate"></ng-template>
+    </nz-tag>
+  </a>
+</ng-container>
+
+<ng-template #revisionTemplate>
   <i nz-icon nzType="civic-revision" nzTheme="twotone" nzTwotoneColor="#F0673A"></i>
   {{ revision.name }}
-</nz-tag>
+</ng-template>
+
+<ng-template #noSubject>
+  <ng-template [ngTemplateOutlet]="revisionTemplate"></ng-template>
+</ng-template>
