--- a/client/src/app/components/layout/viewer-button/viewer-button.component.less
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.less
@@ -9,7 +9,7 @@
 .topMenuIcon {
   font-size: 16px;
 
-  .notificationBadge {
+  .topBarBadge {
     margin-right: -10px;
     margin-top: -16px;
   }
