rework profile page; wire up coi logic

--- a/client/src/app/components/users/user-avatar/user-avatar.component.html
+++ b/client/src/app/components/users/user-avatar/user-avatar.component.html
@@ -4,6 +4,6 @@
   [nzSize]="size">
 </nz-avatar>
 <ng-template #noAvatar>
-  <nz-avatar nz-comment-avatar
+  <nz-avatar nz-comment-avatar [nzSize]="size"
     [nzText]="user.displayName.charAt(0) | uppercase"></nz-avatar>
 </ng-template>
