add admin link where appropriate

--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -56,6 +56,11 @@
                   Your Profile
                 </a>
               </li>
+            <li nz-menu-item *ngIf="viewer.isAdmin">
+              <a routerLink="/admin">
+                Admin Console
+              </a>
+            </li>
             <li nz-menu-divider></li>
             <li nz-menu-item (click)="signOut()">Sign Out</li>
           </ul>
