--- a/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
@@ -70,10 +70,16 @@
             </cvc-entity-subscription-button>
           </nz-space-item>
 
+          <nz-space-item>
+            <cvc-revert-entity-button *ngIf="viewer.canModerate && assertion.status !='SUBMITTED'" entityType="Assertion" [entityId]="assertion.id" (onReverted)="onRevertCompleted($event)">
+            </cvc-revert-entity-button>
+          </nz-space-item>
         </nz-space>
       </nz-page-header-extra>
 
       <nz-page-header-content>
+        <nz-alert *ngFor="let error of this.errors" nzBanner [nzMessage]="error" nzType="error" nzCloseable (nzOnClose)="onErrorBannerClose(error)"></nz-alert>
+        <nz-alert *ngIf="this.successMessage" nzBanner [nzMessage]="this.successMessage" nzType="success" nzCloseable (nzOnClose)="onSuccessBannerClose()"></nz-alert>
         <cvc-tab-navigation [tabs]="this.tabs">
           <ng-template #tabBarExtraContent>
             <nz-col id="contributors-col">
