added user table

--- a/client/src/app/components/organizations/organizations-table/organizations-table.component.html
+++ b/client/src/app/components/organizations/organizations-table/organizations-table.component.html
@@ -55,6 +55,7 @@
         {{ organization.eventCount }}
       </td>
       <td>
+        <!--This field is nullable. probably needs and ngIf-->
         {{ organization.mostRecentEvent.createdAt}}
       </td>
     </tr>
