--- a/client/src/app/views/users/users-home/users-home.page.html
+++ b/client/src/app/views/users/users-home/users-home.page.html
@@ -11,7 +11,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <h3>Users table here.</h3>
+          <cvc-users-table></cvc-users-table>
         </div>
       </div>
     </div>
