--- a/client/src/app/components/organizations/organizations-table/organizations-table.component.html
+++ b/client/src/app/components/organizations/organizations-table/organizations-table.component.html
@@ -55,8 +55,7 @@
         {{ organization.eventCount }}
       </td>
       <td>
-        <!--This field is nullable. probably needs and ngIf-->
-        {{ organization.mostRecentEvent.createdAt}}
+        {{ organization.mostRecentEvent?.createdAt }}
       </td>
     </tr>
   </tbody>
